--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg" href="src/data/Untitled.svg" />
+    <title>SoundPuff</title>
+  </head>
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="icon" type="image/svg" href="src/data/Untitled.svg" />
-      <title>SoundPuff</title>
-    </head>
+  <body>
+    <div id="root"></div>
+    <div id="modal-root"></div>
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
